# Network-Resource-Management

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run_all.py
docs/: MidTerm.md  main.aux  main.bcf  main.nav  main.out  main.run.xml  main.tex  main.toc  ref.bib
experiments/: aggregate_results.py  exp1_performance.py  exp2_negotiation.py  runner.py  train_ppo.py  validate_env.py
paper/BBC6521_Final_Report_LaTeX_Template_25_26/: cover.aux  cover.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  reference.bib
paper/BBC6521_Final_Report_LaTeX_Template_25_26/appendices/: AcknowledgementGenAI.tex  additionalAppendices.tex  agentMessageFormat.tex  disclaimer.tex  drlTrainingCurves.tex  earlyTermProgressReport.tex  midTermProgressReport.tex  projectSpecification.tex  promptTemplates.tex  simulationParameters.tex  supervisionLog.tex  supervisionLogContent.tex
paper/BBC6521_Final_Report_LaTeX_Template_25_26/contents/: abstract.tex  (+8 more)
paper/assets/: Specification Part 2.docx  Zhao Zheyun_2022213670_EarlyTerm.docx  Zhao Zheyun_2022213670_MidTerm.docx  Zhao Zheyun_2022213670_Supervision_log.docx
results/data/: exp1_episodes.csv  exp1_main_table.csv  exp1_steps.csv  exp2_comparison_table.csv  exp2_episodes.csv  exp2_steps.csv  ppo_training_curve.csv
src/agents/: coordinator.py  llm_client.py  multi_agent_graph.py  single_agent.py  slice_agent.py
src/baselines/: fixed_ratio.py  ppo_policy.py  threshold.py
src/environment/: slicing_env.py
src/negotiation/: protocol.py
src/utils/: metrics.py
visualization/: plot_results.py
(+14 files in other folders)
